<resources>
    <string name="app_name">Technology</string>
    <!--drawer-->
    <string name="drawer_open">打开</string>
    <string name="drawer_close">关闭</string>
    <string name="about">关于</string>
    <string name="one">每日一文</string>
    <string name="wei_xin">微信精选</string>
    <string name="gan_hot">干货热门</string>
    <string name="eye_petizer">开眼视频</string>
    <string name="collect">我的收藏</string>
    <string name="setting">设置</string>
    <string name="home">首页</string>
</resources>
